list action icons were mis-aligned.. fixed

--- a/css/layout.css
+++ b/css/layout.css
@@ -107,7 +107,7 @@ ul.menu ul.aboutus{width:159px}
 #lists li label{color:#444;float:left;white-space:nowrap;text-overflow:ellipsis;overflow:hidden;width:120px;cursor:pointer}
 #lists li.inbox label::before{content:' ';background:url("/images/icon-sprites.png") no-repeat -100px -75px;display:inline-block;width:25px;height:20px;float:left}
 #lists li span.taskCount{font-size:.9em;float:right;width:31px;height:18px;text-align:center;display:block;padding-top:1px;margin-top:-1px;font-weight:bold;border:1px solid #ccc;-webkit-border-radius:10px;-moz-border-radius:10px;border-radius:10px}
-#lists li .share,#lists li .delete,#lists li .edit,#lists li .save{background:url("/images/icon-sprites.png") no-repeat;width:15px;height:15px;float:right;cursor:pointer;margin-right:5px;opacity:.7;filter:alpha(opacity=70);display:none;}
+#lists li .share,#lists li .delete,#lists li .edit,#lists li .save{background:url("/images/icon-sprites.png") no-repeat;width:15px;height:15px;float:right;cursor:pointer;margin-top:2px;margin-right:5px;opacity:.7;filter:alpha(opacity=70);display:none;}
 #lists li .share:hover,#lists li .delete:hover,#lists li .edit:hover,#lists li .save:hover{opacity:1;filter:alpha(opacity=100)}
 #lists li .share{background-position:0 -125px}
 #lists li .delete{background-position:-25px -125px}
