--- a/css/src/css/list.styl
+++ b/css/src/css/list.styl
@@ -61,6 +61,7 @@
       height: 15px;
       float: right;
       cursor: pointer;
+      margin-top: 2px;
       margin-right: 5px;
       opacity: 0.7;
       display: none;
